test/files/neg/t0764.check
t0764.scala:13: error: type mismatch;
 found   : Node{type T = _2.type} where val _2: Node{type T = NextType}
 required: Node{type T = Main.this.AType}
    (which expands to)  Node{type T = Node{type T = NextType}}
        new Main[AType]( (value: AType).prepend )
                                        ^
one error found
